[package]
name = "is-mart-open-api"
version = "0.1.0"
authors = ["B4TT3RY <gb4tt3ry@gmail.com>"]
edition = "2021"

[dependencies]
tide = "0.16.0"
async-std = { version = "1.8.0", features = ["attributes"] }
serde = { version = "1.0", features = ["derive"] }
eyre = "0.6.5"
urlencoding = "2.1.0"
sqlx = { version = "0.5.9", features = ["postgres", "runtime-async-std-native-tls", "time"] }
tide-sqlx = "0.6.1"
dotenv = "0.15.0"
geoutils = "0.4.1"